
===========
Changes log  
===========


@version-full@ (@release-date@)
[Bugs fixed]
 - Fixed issue in the selection of connectors. The last connector in the classpath for
   a given protocol was selected instead of the first one, leading to counter-intuitive 
   behavior when multiple connectors were present in the classpath.

[Enhancements] 
 - Added a getApplication() method to Context and Resource classes.
 - Upgraded Apache MINA to version 1.1.0.
 - There are now default internal HTTP client and server connectors exposed in the NRE core.
   If no other HTTP connectors are found in the classpath, those connectors will be used.
   They should perform reasonably under normal workloads but won't be as scalable as the
   NIO based connectors such as Grizzly and MINA based ones. You don't have anything to do
   to configure them, just put the com.noelios.restlet.jar in your classpath along with the
   Restlet API's JAR. Note that they don't support HTTPS and persistent connections.
 - All HTTPS server connectors (Grizzly, Jetty and Simple) now have two configuration
   parameters to indicates whether a client authentication is wanted or required.
   Suggested by Toby Thain and Chuck Hinson.
 - A request attribute "org.restlet.https.clientCertificates" containing the list of SSL
   session certificates (if available and accessible) is now available. Currently, only
   the Simple connector is capable or setting it. Suggested by Toby Chain.
   